# generic-token-faucet

./: .gitignore  Anchor.toml
programs/devnet-token-faucet/: Cargo.toml
programs/devnet-token-faucet/src/: lib.rs
programs/generic-token-faucet/: Cargo.toml
programs/generic-token-faucet/src/: lib.rs
tests/: devnet-token-faucet.ts  generic-token-faucet.ts
