[package]
name = "devnet-token-faucet"
version = "0.1.0"
description = "Faucet program that allows creation and minting of spl tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "devnet_token_faucet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-associated-token-account = "1.0.5"