[package]
name = "devnet-token-faucet"
version = "0.1.1"
description = "Faucet program that allows creation and minting of spl tokens"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "devnet_token_faucet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", git = "https://github.com/coral-xyz/anchor/", branch = "master" }
anchor-spl = { version = "0.25.0", git = "https://github.com/coral-xyz/anchor/", branch = "master" }
spl-associated-token-account = "1.1.1"

#[patch.crates-io]
#anchor-spl = { git = 'https://github.com/coral-xyz/anchor/tree/master/spl' }