[package]
name = "generic-token-faucet"
version = "0.1.2"
description = "Faucet program that allows creation and minting of spl tokens"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "generic_token_faucet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl =  "0.26.0"
spl-associated-token-account = "1.1.1"
